# RoomBooker

./: .env  .gitignore  Cargo.toml  Dockerfile  Notes.md  README.md  docker-compose.yaml  nginx.conf
.sqlx/: query-4a53e2c46eee50514c5c16d469591af54c902955bdef11d20db0a33e5195dcc5.json  query-b04d279660bb224d58398702dbba2524d811b8c794144ef1e6cea6c79a90134d.json
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  routes.rs
backend/src/models/: administrator.rs  booking.rs  classroom.rs
backend/src/routes/: booking.rs  classroom.rs
backend/static/css/: style.css
backend/templates/: add_booking.html  base.html  index.html
db/: Dockerfile
diagrams/: database.drawio
migrations/: 0001_schema.sql  0002_classroom_data.sql  0003_cron_actions.sql
sql/: drop_data.sql  test_db_data.sql
src/: db.rs  main.rs  models.rs  routes.rs  utils.rs
src/models/: administrator.rs  booking.rs  classroom.rs
src/routes/: booking.rs  classroom.rs  main_page.rs  privacy_policy.rs  templates_structs.rs
static/css/: style.css
templates/: add_booking.html  all_bookings.html  all_classrooms.html  base.html  privacy_policy.html
