[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres"]}
tokio = "1.48.0"
tower-http = {version = "0.6.6", features = ["cors"]}

[dev-dependencies]
sqlx-cli = "0.8.6"
