[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
askama = "0.15.4"
dotenvy = "0.15.7"
chrono = {version = "*", features = ["serde"]}
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"]}
tokio = {version = "1.49.0", features = ["full"]}
tower-http = {version = "0.6.8", features = ["cors", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
sqlx-cli = "0.8.6"
